plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.0'
	id 'io.spring.dependency-management' version '1.1.4'
	id 'org.openapi.generator' version '7.2.0'
}

group = 'com.iaproject'
version = '1.0.0'

java {
	sourceCompatibility = '17'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
	maven { url 'https://repo.spring.io/milestone' }
	maven { url 'https://repo.spring.io/snapshot' }
}

ext {
	springAiVersion = '1.0.0-M4'
}

dependencies {
	// Spring Boot Web
	implementation 'org.springframework.boot:spring-boot-starter-web'
	
	// Spring Boot Validation
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	
	// OpenAPI/Swagger - API First
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
	implementation 'io.swagger.core.v3:swagger-annotations:2.2.20'
	implementation 'org.openapitools:jackson-databind-nullable:0.2.6'
	
	// Spring Data JPA y PostgreSQL
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	runtimeOnly 'org.postgresql:postgresql'
	
	// Flyway para migraciones de base de datos
	implementation 'org.flywaydb:flyway-core'
	implementation 'org.flywaydb:flyway-database-postgresql'
	
	// Hypersistence Utils para soporte JSONB en Hibernate
	implementation 'io.hypersistence:hypersistence-utils-hibernate-63:3.7.0'
	
	// Spring AI OpenAI (versión explícita)
	implementation "org.springframework.ai:spring-ai-openai-spring-boot-starter:${springAiVersion}"
	
	// Lombok para reducir boilerplate
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	
	// Spring Boot DevTools
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	
	// Actuator para health checks y métricas
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	
	// Cache support (para AllowedDomainService)
	implementation 'org.springframework.boot:spring-boot-starter-cache'
	
	// JSON logging
	implementation 'net.logstash.logback:logstash-logback-encoder:8.0'
	
	// Testing
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.ai:spring-ai-bom:${springAiVersion}"
	}
}

tasks.named('test') {
	useJUnitPlatform()
}

// Configuración de OpenAPI Generator
openApiGenerate {
	generatorName = 'spring'
	inputSpec = "$projectDir/src/main/resources/openapi/api-spec.yaml".toString()
	outputDir = "$buildDir/generated".toString()
	apiPackage = 'com.iaproject.agent.api'
	modelPackage = 'com.iaproject.agent.model'
	configOptions = [
		interfaceOnly: 'true',
		useSpringBoot3: 'true',
		useTags: 'true',
		skipDefaultInterface: 'true',
		documentationProvider: 'springdoc',
		openApiNullable: 'false',
		useJakartaEe: 'true',
		dateLibrary: 'java8-localdatetime'
	]
	typeMappings = [
		DateTime: 'LocalDateTime',
		'date-time': 'LocalDateTime'
	]
	importMappings = [
		LocalDateTime: 'java.time.LocalDateTime'
	]
}

// Configurar directorios de código generado
sourceSets {
	main {
		java {
			srcDir "${buildDir}/generated/src/main/java"
		}
	}
}

// Asegurar que el código se genera antes de compilar
tasks.named('compileJava') {
	dependsOn tasks.openApiGenerate
}
